--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "eslint": "^5.6.1",
+    "eslint-plugin-vue": "^4.7.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
